# name: test_get_guild_crest_border_media
  <class 'dict'> {
    '_links': <class 'dict'> {
      'self': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/0?namespace=static-8.3.0_32861-us',
      },
    },
    'assets': <class 'list'> [
      <class 'dict'> {
        'key': 'image',
        'value': 'https://render-us.worldofwarcraft.com/guild/tabards/border_00.png',
      },
    ],
    'id': 0,
  }
---
# name: test_get_guild_crest_components_index
  <class 'dict'> {
    '_links': <class 'dict'> {
      'self': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/guild-crest/?namespace=static-8.3.0_32861-us',
      },
    },
    'borders': <class 'list'> [
      <class 'dict'> {
        'id': 0,
        'media': <class 'dict'> {
          'id': 0,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/0?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 1,
        'media': <class 'dict'> {
          'id': 1,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/1?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 2,
        'media': <class 'dict'> {
          'id': 2,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/2?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 3,
        'media': <class 'dict'> {
          'id': 3,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/3?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 4,
        'media': <class 'dict'> {
          'id': 4,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/4?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 5,
        'media': <class 'dict'> {
          'id': 5,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/border/5?namespace=static-8.3.0_32861-us',
          },
        },
      },
    ],
    'emblems': <class 'list'> [
      <class 'dict'> {
        'id': 0,
        'media': <class 'dict'> {
          'id': 0,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/0?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 1,
        'media': <class 'dict'> {
          'id': 1,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/1?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 2,
        'media': <class 'dict'> {
          'id': 2,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/2?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 3,
        'media': <class 'dict'> {
          'id': 3,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/3?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 4,
        'media': <class 'dict'> {
          'id': 4,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/4?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 5,
        'media': <class 'dict'> {
          'id': 5,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/5?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 6,
        'media': <class 'dict'> {
          'id': 6,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/6?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 7,
        'media': <class 'dict'> {
          'id': 7,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/7?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 8,
        'media': <class 'dict'> {
          'id': 8,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/8?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 9,
        'media': <class 'dict'> {
          'id': 9,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/9?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 10,
        'media': <class 'dict'> {
          'id': 10,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/10?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 11,
        'media': <class 'dict'> {
          'id': 11,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/11?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 12,
        'media': <class 'dict'> {
          'id': 12,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/12?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 13,
        'media': <class 'dict'> {
          'id': 13,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/13?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 14,
        'media': <class 'dict'> {
          'id': 14,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/14?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 15,
        'media': <class 'dict'> {
          'id': 15,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/15?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 16,
        'media': <class 'dict'> {
          'id': 16,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/16?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 17,
        'media': <class 'dict'> {
          'id': 17,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/17?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 18,
        'media': <class 'dict'> {
          'id': 18,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/18?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 19,
        'media': <class 'dict'> {
          'id': 19,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/19?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 20,
        'media': <class 'dict'> {
          'id': 20,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/20?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 21,
        'media': <class 'dict'> {
          'id': 21,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/21?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 22,
        'media': <class 'dict'> {
          'id': 22,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/22?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 23,
        'media': <class 'dict'> {
          'id': 23,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/23?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 24,
        'media': <class 'dict'> {
          'id': 24,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/24?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 25,
        'media': <class 'dict'> {
          'id': 25,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/25?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 26,
        'media': <class 'dict'> {
          'id': 26,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/26?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 27,
        'media': <class 'dict'> {
          'id': 27,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/27?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 28,
        'media': <class 'dict'> {
          'id': 28,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/28?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 29,
        'media': <class 'dict'> {
          'id': 29,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/29?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 30,
        'media': <class 'dict'> {
          'id': 30,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/30?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 31,
        'media': <class 'dict'> {
          'id': 31,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/31?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 32,
        'media': <class 'dict'> {
          'id': 32,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/32?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 33,
        'media': <class 'dict'> {
          'id': 33,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/33?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 34,
        'media': <class 'dict'> {
          'id': 34,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/34?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 35,
        'media': <class 'dict'> {
          'id': 35,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/35?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 36,
        'media': <class 'dict'> {
          'id': 36,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/36?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 37,
        'media': <class 'dict'> {
          'id': 37,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/37?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 38,
        'media': <class 'dict'> {
          'id': 38,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/38?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 39,
        'media': <class 'dict'> {
          'id': 39,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/39?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 40,
        'media': <class 'dict'> {
          'id': 40,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/40?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 41,
        'media': <class 'dict'> {
          'id': 41,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/41?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 42,
        'media': <class 'dict'> {
          'id': 42,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/42?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 43,
        'media': <class 'dict'> {
          'id': 43,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/43?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 44,
        'media': <class 'dict'> {
          'id': 44,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/44?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 45,
        'media': <class 'dict'> {
          'id': 45,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/45?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 46,
        'media': <class 'dict'> {
          'id': 46,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/46?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 47,
        'media': <class 'dict'> {
          'id': 47,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/47?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 48,
        'media': <class 'dict'> {
          'id': 48,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/48?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 49,
        'media': <class 'dict'> {
          'id': 49,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/49?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 50,
        'media': <class 'dict'> {
          'id': 50,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/50?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 51,
        'media': <class 'dict'> {
          'id': 51,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/51?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 52,
        'media': <class 'dict'> {
          'id': 52,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/52?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 53,
        'media': <class 'dict'> {
          'id': 53,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/53?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 54,
        'media': <class 'dict'> {
          'id': 54,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/54?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 55,
        'media': <class 'dict'> {
          'id': 55,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/55?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 56,
        'media': <class 'dict'> {
          'id': 56,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/56?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 57,
        'media': <class 'dict'> {
          'id': 57,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/57?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 58,
        'media': <class 'dict'> {
          'id': 58,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/58?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 59,
        'media': <class 'dict'> {
          'id': 59,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/59?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 60,
        'media': <class 'dict'> {
          'id': 60,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/60?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 61,
        'media': <class 'dict'> {
          'id': 61,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/61?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 62,
        'media': <class 'dict'> {
          'id': 62,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/62?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 63,
        'media': <class 'dict'> {
          'id': 63,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/63?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 64,
        'media': <class 'dict'> {
          'id': 64,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/64?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 65,
        'media': <class 'dict'> {
          'id': 65,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/65?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 66,
        'media': <class 'dict'> {
          'id': 66,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/66?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 67,
        'media': <class 'dict'> {
          'id': 67,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/67?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 68,
        'media': <class 'dict'> {
          'id': 68,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/68?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 69,
        'media': <class 'dict'> {
          'id': 69,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/69?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 70,
        'media': <class 'dict'> {
          'id': 70,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/70?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 71,
        'media': <class 'dict'> {
          'id': 71,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/71?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 72,
        'media': <class 'dict'> {
          'id': 72,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/72?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 73,
        'media': <class 'dict'> {
          'id': 73,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/73?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 74,
        'media': <class 'dict'> {
          'id': 74,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/74?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 75,
        'media': <class 'dict'> {
          'id': 75,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/75?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 76,
        'media': <class 'dict'> {
          'id': 76,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/76?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 77,
        'media': <class 'dict'> {
          'id': 77,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/77?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 78,
        'media': <class 'dict'> {
          'id': 78,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/78?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 79,
        'media': <class 'dict'> {
          'id': 79,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/79?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 80,
        'media': <class 'dict'> {
          'id': 80,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/80?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 81,
        'media': <class 'dict'> {
          'id': 81,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/81?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 82,
        'media': <class 'dict'> {
          'id': 82,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/82?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 83,
        'media': <class 'dict'> {
          'id': 83,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/83?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 84,
        'media': <class 'dict'> {
          'id': 84,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/84?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 85,
        'media': <class 'dict'> {
          'id': 85,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/85?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 86,
        'media': <class 'dict'> {
          'id': 86,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/86?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 87,
        'media': <class 'dict'> {
          'id': 87,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/87?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 88,
        'media': <class 'dict'> {
          'id': 88,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/88?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 89,
        'media': <class 'dict'> {
          'id': 89,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/89?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 90,
        'media': <class 'dict'> {
          'id': 90,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/90?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 91,
        'media': <class 'dict'> {
          'id': 91,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/91?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 92,
        'media': <class 'dict'> {
          'id': 92,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/92?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 93,
        'media': <class 'dict'> {
          'id': 93,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/93?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 94,
        'media': <class 'dict'> {
          'id': 94,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/94?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 95,
        'media': <class 'dict'> {
          'id': 95,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/95?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 96,
        'media': <class 'dict'> {
          'id': 96,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/96?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 97,
        'media': <class 'dict'> {
          'id': 97,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/97?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 98,
        'media': <class 'dict'> {
          'id': 98,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/98?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 99,
        'media': <class 'dict'> {
          'id': 99,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/99?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 100,
        'media': <class 'dict'> {
          'id': 100,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/100?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 101,
        'media': <class 'dict'> {
          'id': 101,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/101?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 102,
        'media': <class 'dict'> {
          'id': 102,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/102?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 103,
        'media': <class 'dict'> {
          'id': 103,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/103?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 104,
        'media': <class 'dict'> {
          'id': 104,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/104?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 105,
        'media': <class 'dict'> {
          'id': 105,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/105?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 106,
        'media': <class 'dict'> {
          'id': 106,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/106?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 107,
        'media': <class 'dict'> {
          'id': 107,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/107?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 108,
        'media': <class 'dict'> {
          'id': 108,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/108?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 109,
        'media': <class 'dict'> {
          'id': 109,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/109?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 110,
        'media': <class 'dict'> {
          'id': 110,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/110?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 111,
        'media': <class 'dict'> {
          'id': 111,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/111?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 112,
        'media': <class 'dict'> {
          'id': 112,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/112?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 113,
        'media': <class 'dict'> {
          'id': 113,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/113?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 114,
        'media': <class 'dict'> {
          'id': 114,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/114?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 115,
        'media': <class 'dict'> {
          'id': 115,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/115?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 116,
        'media': <class 'dict'> {
          'id': 116,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/116?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 117,
        'media': <class 'dict'> {
          'id': 117,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/117?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 118,
        'media': <class 'dict'> {
          'id': 118,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/118?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 119,
        'media': <class 'dict'> {
          'id': 119,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/119?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 120,
        'media': <class 'dict'> {
          'id': 120,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/120?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 121,
        'media': <class 'dict'> {
          'id': 121,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/121?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 122,
        'media': <class 'dict'> {
          'id': 122,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/122?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 123,
        'media': <class 'dict'> {
          'id': 123,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/123?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 124,
        'media': <class 'dict'> {
          'id': 124,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/124?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 125,
        'media': <class 'dict'> {
          'id': 125,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/125?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 126,
        'media': <class 'dict'> {
          'id': 126,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/126?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 127,
        'media': <class 'dict'> {
          'id': 127,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/127?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 128,
        'media': <class 'dict'> {
          'id': 128,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/128?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 129,
        'media': <class 'dict'> {
          'id': 129,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/129?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 130,
        'media': <class 'dict'> {
          'id': 130,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/130?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 131,
        'media': <class 'dict'> {
          'id': 131,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/131?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 132,
        'media': <class 'dict'> {
          'id': 132,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/132?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 133,
        'media': <class 'dict'> {
          'id': 133,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/133?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 134,
        'media': <class 'dict'> {
          'id': 134,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/134?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 135,
        'media': <class 'dict'> {
          'id': 135,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/135?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 136,
        'media': <class 'dict'> {
          'id': 136,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/136?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 137,
        'media': <class 'dict'> {
          'id': 137,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/137?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 138,
        'media': <class 'dict'> {
          'id': 138,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/138?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 139,
        'media': <class 'dict'> {
          'id': 139,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/139?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 140,
        'media': <class 'dict'> {
          'id': 140,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/140?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 141,
        'media': <class 'dict'> {
          'id': 141,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/141?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 142,
        'media': <class 'dict'> {
          'id': 142,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/142?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 143,
        'media': <class 'dict'> {
          'id': 143,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/143?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 144,
        'media': <class 'dict'> {
          'id': 144,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/144?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 145,
        'media': <class 'dict'> {
          'id': 145,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/145?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 146,
        'media': <class 'dict'> {
          'id': 146,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/146?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 147,
        'media': <class 'dict'> {
          'id': 147,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/147?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 148,
        'media': <class 'dict'> {
          'id': 148,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/148?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 149,
        'media': <class 'dict'> {
          'id': 149,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/149?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 150,
        'media': <class 'dict'> {
          'id': 150,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/150?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 151,
        'media': <class 'dict'> {
          'id': 151,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/151?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 152,
        'media': <class 'dict'> {
          'id': 152,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/152?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 153,
        'media': <class 'dict'> {
          'id': 153,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/153?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 154,
        'media': <class 'dict'> {
          'id': 154,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/154?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 155,
        'media': <class 'dict'> {
          'id': 155,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/155?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 156,
        'media': <class 'dict'> {
          'id': 156,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/156?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 157,
        'media': <class 'dict'> {
          'id': 157,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/157?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 158,
        'media': <class 'dict'> {
          'id': 158,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/158?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 159,
        'media': <class 'dict'> {
          'id': 159,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/159?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 160,
        'media': <class 'dict'> {
          'id': 160,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/160?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 161,
        'media': <class 'dict'> {
          'id': 161,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/161?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 162,
        'media': <class 'dict'> {
          'id': 162,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/162?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 163,
        'media': <class 'dict'> {
          'id': 163,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/163?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 164,
        'media': <class 'dict'> {
          'id': 164,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/164?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 165,
        'media': <class 'dict'> {
          'id': 165,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/165?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 166,
        'media': <class 'dict'> {
          'id': 166,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/166?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 167,
        'media': <class 'dict'> {
          'id': 167,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/167?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 168,
        'media': <class 'dict'> {
          'id': 168,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/168?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 169,
        'media': <class 'dict'> {
          'id': 169,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/169?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 170,
        'media': <class 'dict'> {
          'id': 170,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/170?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 171,
        'media': <class 'dict'> {
          'id': 171,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/171?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 172,
        'media': <class 'dict'> {
          'id': 172,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/172?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 173,
        'media': <class 'dict'> {
          'id': 173,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/173?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 174,
        'media': <class 'dict'> {
          'id': 174,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/174?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 175,
        'media': <class 'dict'> {
          'id': 175,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/175?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 176,
        'media': <class 'dict'> {
          'id': 176,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/176?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 177,
        'media': <class 'dict'> {
          'id': 177,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/177?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 178,
        'media': <class 'dict'> {
          'id': 178,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/178?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 179,
        'media': <class 'dict'> {
          'id': 179,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/179?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 180,
        'media': <class 'dict'> {
          'id': 180,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/180?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 181,
        'media': <class 'dict'> {
          'id': 181,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/181?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 182,
        'media': <class 'dict'> {
          'id': 182,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/182?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 183,
        'media': <class 'dict'> {
          'id': 183,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/183?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 184,
        'media': <class 'dict'> {
          'id': 184,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/184?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 185,
        'media': <class 'dict'> {
          'id': 185,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/185?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 186,
        'media': <class 'dict'> {
          'id': 186,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/186?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 187,
        'media': <class 'dict'> {
          'id': 187,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/187?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 188,
        'media': <class 'dict'> {
          'id': 188,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/188?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 189,
        'media': <class 'dict'> {
          'id': 189,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/189?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 190,
        'media': <class 'dict'> {
          'id': 190,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/190?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 191,
        'media': <class 'dict'> {
          'id': 191,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/191?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 192,
        'media': <class 'dict'> {
          'id': 192,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/192?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 193,
        'media': <class 'dict'> {
          'id': 193,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/193?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 194,
        'media': <class 'dict'> {
          'id': 194,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/194?namespace=static-8.3.0_32861-us',
          },
        },
      },
      <class 'dict'> {
        'id': 195,
        'media': <class 'dict'> {
          'id': 195,
          'key': <class 'dict'> {
            'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/195?namespace=static-8.3.0_32861-us',
          },
        },
      },
    ],
  }
---
# name: test_get_guild_crest_emblem_media
  <class 'dict'> {
    '_links': <class 'dict'> {
      'self': <class 'dict'> {
        'href': 'https://us.api.blizzard.com/data/wow/media/guild-crest/emblem/0?namespace=static-8.3.0_32861-us',
      },
    },
    'assets': <class 'list'> [
      <class 'dict'> {
        'key': 'image',
        'value': 'https://render-us.worldofwarcraft.com/guild/tabards/emblem_00.png',
      },
    ],
    'id': 0,
  }
---
